--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -90,6 +90,10 @@ textarea {
     
 }
 
+
+label {
+    font-weight: 500;
+}
 @media screen and (max-width: 500px) {
     .form div {
         width: 90%;
@@ -98,7 +102,7 @@ textarea {
         font-size: 25px;
     }
     .form .intro {
-        font-size: 15px;
+        font-size: 17px;
     }
     .row1 {
         display: block;
